# Transcribe

./: .gitignore  README.md  process_video.sh  pyproject.toml
